[package]
name = "hyper-tls"
version = "0.1.4"
description = "Default TLS implementation for use with hyper"
authors = ["Sean McArthur <sean.monstar@gmail.com>"]
license = "MIT/Apache-2.0"
keywords = ["hyper", "tls", "http", "https", "ssl"]
homepage = "https://hyper.rs"
repository = "https://github.com/hyperium/hyper-tls"
documentation = "https://docs.rs/hyper-tls"

[dependencies]
futures = "0.1.11"
native-tls = {path = "../native-tls"}
hyper =  { path = "../hyper" }
tokio-core = {path = "../tokio-core"}
tokio-io = {path = "../tokio/tokio-io"}
tokio-service = "0.1"
tokio-tls = {path = "../tokio-tls"}
